fixed all margins on mobile and desktop

--- a/chamber/directory.css
+++ b/chamber/directory.css
@@ -28,10 +28,6 @@ nav ul li a {
     text-decoration: none;
 }
 
-main {
-    padding: 9rem;
-    padding-top: 1rem;
-}
 
 h2 {
     text-align: center;
@@ -131,6 +127,13 @@ footer {
     .member-card {
         width: auto; /* Two cards side by side in grid view */
         align-items: flex-end;
-        flex-direction: row;}
+        flex-direction: row;
+    }
+    
+    main {
+        padding: 9rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
 }
 
